tooltip overlap fixed

--- a/src/assets/scss/common/_sidebar.scss
+++ b/src/assets/scss/common/_sidebar.scss
@@ -2,6 +2,7 @@
   // position: absolute;
   position: fixed;
     height: 100vh;
+    top: 0;
     background-color: $secondary;
     width: 27.2rem;
     .container {
