--- a/src/assets/scss/portfolio/_portfolio.scss
+++ b/src/assets/scss/portfolio/_portfolio.scss
@@ -794,7 +794,7 @@ position: relative;
 
 
 .piechart-column{
-     align-items: center;
+     align-items: inherit;
                   justify-content: start;
                   display: flex;
                   flex-direction: column;
